# Django_chatGPT_practice

./: .gitignore  README.md  pyproject.toml
chat/: admin.py  consumers.py  forms.py  models.py  routing.py  translators.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: roleplayingroom_confirm_delete.html  roleplayingroom_detail.html  roleplayingroom_list.html
config/: asgi.py  settings.py
